--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_EMAIL_JS_SERVICE_ID = service_sb13ddv
-REACT_APP_EMAIL_JS_TEMPLATE_ID = template_f5n8x1w
-REACT_APP_EMAIL_JS_PUBLIC_KEY = oMatDMqFuragh8nqx
+REACT_APP_EMAIL_JS_SERVICE_ID = *****
+REACT_APP_EMAIL_JS_TEMPLATE_ID = *****
+REACT_APP_EMAIL_JS_PUBLIC_KEY = *****
